src/test/ui/type-alias-impl-trait/nested-tait-inference3.stderr
error: cannot implement trait on type alias impl trait
  --> $DIR/nested-tait-inference3.rs:10:10
   |
LL | impl Foo<FooX> for () { }
   |          ^^^^
   |
note: type alias impl trait defined here
  --> $DIR/nested-tait-inference3.rs:6:13
   |
LL | type FooX = impl Debug;
   |             ^^^^^^^^^^

error: aborting due to previous error

